# python_teams_bot

./: .gitignore  .pre-commit-config.yaml  CROSS_TENANT_README.md  DEMO_README.md  DEPLOYMENT.md  LOCAL_TESTING.MD  TODOS.md  app.py  azure.yaml  config.py  m365agents.local.yml  m365agents.yml  pyproject.toml  requirements.txt
appManifest/: manifest.json
bots/: teams_conversation_bot.py
infra/: azure.bicep  azure.parameters.json  resources.bicep
infra/ai_services/: resources.bicep
infra/app_services/: resources.bicep
infra/bot_services/: resources.bicep
